--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,10 +1,10 @@
 .navbar {
-  background: #6a1b9a;
+  background: #9a1b1b;
   height: 60px;
 }
 
 .navbar a {
-  color: white;
+  color: #000080;
   font-size: 1.3rem;
   text-decoration: none;
   margin: 5px;
