--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -12,3 +12,55 @@
   display: flex;
   justify-content: center;
 }
+
+@media only screen and (max-width: 600px) {
+  nav ul {
+    display: none;
+  }
+
+  nav li {
+    display: block;
+    margin: 0;
+  }
+
+  nav li:first-child {
+    margin-top: 10px;
+  }
+
+  nav a {
+    display: block;
+    padding: 10px 0;
+    border-bottom: 1px solid #fff;
+  }
+
+  nav a:hover {
+    background-color: transparent;
+    color: #fff;
+  }
+}
+
+
+@media only screen and (min-width: 601px) {
+  nav ul {
+    display: flex;
+  }
+
+  nav li {
+    display: inline-block;
+    margin: 0 10px;
+  }
+
+  nav li:first-child {
+    margin-left: 0;
+  }
+
+  nav a {
+    padding: 10px;
+    border-bottom: none;
+  }
+
+  nav a:hover {
+    background-color: #555;
+    color: #fff;
+  }
+}
